# C_music_player

./: .gitignore  CMakeLists.txt  README.md  a.out  main.c  manipulate_sqlite3.c  manipulate_sqlite3.h  mplayer  music.c  music.db  music.h  readMe.md  ring.db
